--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Pathfinding</title>
 		<link rel="stylesheet" href="./css/style.css">
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
 	</head>
 	<body>
 		<header class="header" id="header">
@@ -16,5 +16,6 @@
 		<div class="area" id="area"></div>
 
 		<script src="./js/board.js"></script>
+		<script src="./jd/astar.js"></script>
 	</body>
 </html>
