diff algorithm, todo change html grid to array

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 		<div class="area" id="area"></div>
 
 		<script src="./js/board.js"></script>
-		<script src="./jd/astar.js"></script>
+		<script src="./js/astar.js"></script>
+		<script type='text/javascript'>
+			var graph = new Graph([
+				[1,1,1,1],
+				[0,1,1,0],
+				[0,0,1,1]
+			]);
+var start = graph.grid[0][0];
+var end = graph.grid[1][2];
+var result = astar.search(graph, start, end);	
+console.log(result)
+		</script>
+
 	</body>
 </html>
