--- a/index.html
+++ b/index.html
@@ -20,40 +20,7 @@
 
 	<script src="./js/board.js"></script>
 	<script src="./js/astar.js"></script>
-
-	<script type='text/javascript'>
-		var graph = new Graph(board)
-		let doing = false;
-		function search() {
-			if (!doing) {
-				doing = true
-				$('.block').removeClass("road");
-				$('.block').removeClass("visited");
-				var graph = new Graph(board)
-
-				var start = graph.grid[startX][startY];
-				var end = graph.grid[endX][endY];
-
-				var result = astar.search(graph, start, end);
-
-				document.getElementById("allBlocks").innerHTML = result.length
-				setInterval(()=>{
-				console.log(done.a)
-				},100)
-			}
-		}
-		function getRoad(){
-							for (let i = 0; i < result.length; i++) {
-						setTimeout(() => {
-							document.querySelector(`.row-${result[i].y} .block-${result[i].x}`).classList.remove("visited")
-							document.querySelector(`.row-${result[i].y} .block-${result[i].x}`).classList.add("road")
-						}, 30 * i);
-					}
-					setTimeout(() => {
-						doing = false
-					}, 50 * result.length);
-		}
-	</script>
+	<script src="./js/renderRoad.js"></script>
 
 </body>
 
