changed look of grid

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
 	<header class="header" id="header">
-		<button onClick="search()"></button>
+        <h4>Legend:</h4>
+        <div class="block wall"></div>
+		<button onClick="search()">Visualize</button>
 		<p style="color: white" id="allBlocks"></p>
 	</header>
 	<div class="area" id="area"></div>
