--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
 	<header class="header" id="header">
-        <h4>Legend:</h4>
-        <div class="block wall"></div>
-		<button onClick="search()">Visualize</button>
+        <h3>Legend:</h3>
+        <div class="desc">
+            <div class="block wall"></div>
+            <h4> - Wall</h4>
+        </div>
+        <button onClick="search()">Visualize</button>
 		<p style="color: white" id="allBlocks"></p>
 	</header>
 	<div class="area" id="area"></div>
