legend, css, distance in blocks

--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Pathfinding</title>
 	<link rel="stylesheet" href="./css/style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
 	<header class="header" id="header">
-        <h3>Legend:</h3>
-        <div class="desc">
-            <div class="block wall"></div>
-            <h4> - Wall</h4>
+        <div class="flex">
+            <h3>Legend:&nbsp;&nbsp;&nbsp;</h3>
+            <div class="flex">
+                <div class="block wall"></div>
+                <h4>&nbsp; - Wall block</h4>
+            </div>
+            <div class="flex">
+                <div class="block visited"></div>
+                <h4>&nbsp; - Visited block by algorithm</h4>
+            </div>
+            <div class="flex">
+                <div class="block road"></div>
+                <h4>&nbsp; - Road block</h4>
+            </div>
         </div>
-        <button onClick="search()">Visualize</button>
-		<p style="color: white" id="allBlocks"></p>
+        <button class="btn" id="btn" onClick="search()">Visualize</button>
+		<p id="allBlocks">Distance in blocks: </p>
 	</header>
 	<div class="area" id="area"></div>
 
