reset button, todo: improve creating walls on hold, able to move points

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             </div>
         </div>
         <button class="btn" id="btn" onClick="search()">Visualize</button>
-		<p id="allBlocks">Distance in blocks: </p>
+        <button class="btn reset" onClick="renderArea()">RESET</button>
+		
+        <p id="allBlocks">Distance in blocks: </p>
 	</header>
 	<div class="area" id="area"></div>
 
