started working on moving points

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 	</header>
 	<div class="area" id="area"></div>
 
+
 	<script src="./js/board.js"></script>
 	<script src="./js/astar.js"></script>
 	<script src="./js/renderRoad.js"></script>
-
+	<script src="./js/movePoints.js"></script>
 </body>
 
 </html>
