info for smaller screens

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
-
   <body>
+    <div class="mobile-info">
+      <h2> Sorry, we don't support smaller screens</h2>
+    </div>
     <header class="header" id="header">
       <div class="flex">
         <h3>Legend:&nbsp;&nbsp;&nbsp;</h3>
